--- a/infrastructure/containers/mesos.slave/Dockerfile
+++ b/infrastructure/containers/mesos.slave/Dockerfile
@@ -11,10 +11,14 @@ RUN yum install -y mesos-0.23.0-1.0.centos701406 device-mapper-event-libs
 # configure docker support
 RUN echo 'docker,mesos' > /etc/mesos-slave/containerizers && \
   echo '5mins' > /etc/mesos-slave/executor_registration_timeout
+# install docker client
 #RUN curl -o /usr/local/bin/docker https://get.docker.com/builds/Linux/x86_64/docker-${DOCKER_VERSION} && \
 #chmod +x /usr/local/bin/docker
+
+ENV MESOS_WORK_DIR /var/lib/mesos/slave
+ENV MESOS_LOG_DIR /var/log/mesos/slave
 
 EXPOSE 5051
 
 #CMD ["mesos-slave", "--ip=0.0.0.0", "--work_dir=/var/lib/mesos/slave", "--log_dir=/var/log/mesos/slave"]
-CMD ["mesos-slave", "--work_dir=/var/lib/mesos/slave", "--log_dir=/var/log/mesos/slave"]
+ENTRYPOINT ["mesos-slave"]
